--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - 9090:9090
     volumes:
       - ${PWD}/prometheus.yml:/etc/prometheus/prometheus.yml
+
   web:
     image: ferula-communis
     build: .
@@ -13,3 +14,11 @@ services:
     ports:
       - 8080:8080
 
+  grafana:
+    image: grafana/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=pass
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
